feat(wdfClaimAddLearnersStartPage): Add lines between progress icons

--- a/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
+++ b/src/app/features/wdf/wdf-claims/add-learners-start-page/add-learners-start-page.component.html
@@ -1,5 +1,5 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-three-quarters govuk-!-padding-right-9">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-8">
       <span class="govuk-caption-xl govuk-!-margin-bottom-3">Add learners</span>
       Now you need to add learners to your claim
@@ -23,7 +23,7 @@
       </ul>
     </ng-template>
   </div>
-  <div class="govuk-grid-column-one-third govuk-!-margin-top-8">
+  <div class="govuk-grid-column-one-quarter govuk-!-margin-top-8">
     <app-make-a-claim-progress-bar stepIndex="1"></app-make-a-claim-progress-bar>
   </div>
 </div>
