--- a/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
+++ b/src/app/features/wdf/wdf-claims/wdf-grant-letter/grant-leter-sent/grant-letter-sent.component.html
@@ -1,14 +1,11 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">Grant letter has been sent</h1>
-      </legend>
-      <p data-testid="info" class="govuk-!-margin-bottom-8">
-        The grant letter was sent by email to example@example.com with instructions telling Some one what to do next.
-      </p>
-    </fieldset>
-
-    <a [routerLink]="['/dashboard']" role="button" draggable="false" class="govuk-button">Continue</a>
+  <div class="govuk-grid-column-two-thirds">
+    <app-panel [title]="'The grant letter has been sent'"> </app-panel>
+    <p data-testid="info" class="govuk-!-margin-bottom-8">
+      The grant letter was sent by email to example@example.com with instructions telling Some one what to do next.
+    </p>
+    <a role="button" draggable="false" class="govuk-button govuk-!-margin-top-3" [routerLink]="['/dashboard']">
+      Return to home
+    </a>
   </div>
 </div>
