--- a/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
+++ b/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
@@ -14,7 +14,9 @@
           </label>
         </h1>
 
-        <label class="govuk-label govuk-date-input__label" for="dob-year"> National Insurance number </label>
+        <label class="govuk-label govuk-date-input__label" for="nationalInsuranceNumber">
+          National Insurance number
+        </label>
         <span class="govuk-caption-m govuk-!-margin-bottom-4">For example, 'QQ 12 34 56 C'</span>
         <div>
           <span
