--- a/src/app/features/workers/nationality/nationality.component.html
+++ b/src/app/features/workers/nationality/nationality.component.html
@@ -68,7 +68,7 @@
                 type="radio"
                 value="Don't know"
               />
-              <label class="govuk-label govuk-radios__label" for="nationalityKnown-3"> Don't know </label>
+              <label class="govuk-label govuk-radios__label" for="nationalityKnown-3"> I do not know </label>
             </div>
           </div>
         </div>
@@ -85,5 +85,9 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!insideFlow" (clicked)="setSubmitAction($event)"></app-submit-button>
+  <app-submit-button
+    [showSaveAndCancelButton]="!insideFlow"
+    [return]="!insideFlow"
+    (clicked)="setSubmitAction($event)"
+  ></app-submit-button>
 </form>
