--- a/src/app/features/add-multiple-training/select-staff/select-staff.component.html
+++ b/src/app/features/add-multiple-training/select-staff/select-staff.component.html
@@ -55,7 +55,7 @@
       </div>
     </ng-container>
 
-    <div [class.govuk-form-group--error]="submitted && error">
+    <div [class.govuk-form-group--error]="submitted && error" #table>
       <div class="govuk-!-font-size-19 govuk-!-margin-bottom-5">
         <span class="govuk-!-font-weight-bold"
           >Showing {{ paginatedWorkers?.length }} of {{ totalWorkerCount }} staff</span
@@ -65,23 +65,24 @@
           {{ selectAll ? 'Deselect all' : 'Select all' }}</a
         >
       </div>
-      <div *ngIf="submitted && error">
-        <span class="govuk-error-message">{{ this.errorsMap[0].type[0].message }}</span>
+      <div>
+        <span *ngIf="submitted && error" class="govuk-error-message" id="selectStaff-error"
+          ><span class="govuk-visually-hidden">Error:</span> {{ this.errorsMap[0].type[0].message }}</span
+        >
+        <dl class="govuk-summary-list govuk-summary-list--top-border">
+          <ng-container *ngFor="let worker of paginatedWorkers">
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
+              <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
+              <dd class="govuk-summary-list__actions">
+                <a href="#" name="selectStaff" (click)="selectWorker($event, worker.uid)">{{
+                  selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
+                }}</a>
+              </dd>
+            </div>
+          </ng-container>
+        </dl>
       </div>
-      <dl class="govuk-summary-list govuk-summary-list--top-border" #selectAllButton>
-        <ng-container *ngFor="let worker of paginatedWorkers">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">{{ worker.nameOrId }}</dt>
-            <dd class="govuk-summary-list__value">{{ worker.mainJob.title }}</dd>
-            <dd class="govuk-summary-list__actions">
-              <span *ngIf="submitted && error" class="govuk-visually-hidden" id="selectStaff-error">Error:</span>
-              <a href="#" name="selectStaff" (click)="selectWorker($event, worker.uid)">{{
-                selectAll || selectedWorkers?.includes(worker.uid) ? 'Deselect' : 'Select'
-              }}</a>
-            </dd>
-          </div>
-        </ng-container>
-      </dl>
     </div>
     <app-pagination
       [itemsPerPage]="itemsPerPage"
