--- a/src/app/features/add-mandatory-training/add-mandatory-training.component.html
+++ b/src/app/features/add-mandatory-training/add-mandatory-training.component.html
@@ -8,17 +8,17 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
-      {{ renderAsEditMandatoryTraning ? 'Mandatory training category' : 'Add a mandatory training category' }}
+      {{ renderAsEditMandatoryTraining ? 'Mandatory training category' : 'Add a mandatory training category' }}
     </h1>
   </div>
 </div>
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
   <fieldset class="govuk-fieldset">
-    <div class="govuk-grid-column-two-thirds">
-      <div
-        class="govuk-grid-row govuk-form-group govuk-!-margin-bottom-4"
-        [class.govuk-form-group--error]="submitted && form.get('trainingCategory').invalid"
-      >
+    <div
+      class="govuk-grid-row govuk-form-group govuk-!-margin-bottom-4"
+      [class.govuk-form-group--error]="submitted && form.get('trainingCategory').invalid"
+    >
+      <div class="govuk-grid-column-two-thirds">
         <label class="govuk-label" for="trainingCategory"> Training category </label>
         <span *ngIf="submitted" class="govuk-error-message">
           <ng-container *ngIf="submitted && form.get('trainingCategory').invalid">
@@ -37,6 +37,9 @@
             {{ training.category }}
           </option>
         </select>
+      </div>
+      <div class="govuk-grid-column-one-third govuk-!-margin-top-6">
+        <a href="#" class="govuk-list govuk-list--inline govuk__nowrap">Remove this mandatory training category </a>
       </div>
     </div>
     <div class="govuk-grid-row">
@@ -132,5 +135,5 @@
   <hr
     class="govuk-section-break govuk-section-break--l govuk-section-break--visible govuk-!-margin-bottom-8 govuk-!-margin-top-3"
   />
-  <app-submit-exit-buttons [exit]="'Cancel'" [return]="true"></app-submit-exit-buttons>
+  <app-submit-exit-buttons [exit]="'Cancel'" [return]="return"></app-submit-exit-buttons>
 </form>
